fixed alignment errors between experience and skills sections in css

--- a/src/Styling/About.css
+++ b/src/Styling/About.css
@@ -18,7 +18,7 @@
 
 .aboutContainer .description{
     font-size: 1.5rem;
-    width: 80%;
+    width: 50%;
     text-align: center;
 }
 
