--- a/src/Styling/Experience.css
+++ b/src/Styling/Experience.css
@@ -18,10 +18,14 @@
 
 .cards{
     display: grid;
-    /* width: 70%; */
     grid-template-columns: 1fr;
     gap: 10px;
     padding: 10px;
+}
+
+.cards{
+    flex: 0;
+    max-width: 60%;
 }
 
 .cards .card{
@@ -60,8 +64,9 @@
 }
 
 .cards .card .material ul{
+    margin: 0;
     list-style-type: disc;
-    padding: 5px;
+    padding-left: 5px;
 }
 
 .cards .card .material ul li{
