--- a/src/Styling/Skills.css
+++ b/src/Styling/Skills.css
@@ -21,7 +21,7 @@
 .skillsContainer .skillGrid{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 40px;
+    gap: 35px;
     padding: 15px;
 }
 
@@ -30,11 +30,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 65px;
+    padding: 75px;
     outline: 2.5px solid #d3d3d3;
     border-radius: 10px;
     text-align: center;
-    transition: 0.3s ease-in-out;
+    transition: 0.5s ease-in-out;
 }
 
 .skillsContainer .skillGrid .card:hover{
@@ -49,20 +49,41 @@
 }
 
 .skillsContainer .skillGrid .card h3{
-    padding: 15px;
+    margin-top: 10px;
     font-weight: bold;
 }
 
-@media(max-width: 1280px){
+@media(max-width: 1700px){
     .skillsContainer .skillGrid{
         grid-template-columns: repeat(3, 1fr);
-        width: 85%;
+        width: 60%;
     }
 }
-@media(max-width: 1000px){
+@media(max-width: 1380px){
     .skillsContainer .skillGrid{
-        grid-template-columns: repeat(2, 1fr);
-        width: 85%;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 25px;
+    }
+    .skillsContainer .skillGrid .card{
+        padding: 60px;
+    }
+}
+@media(max-width: 1200px){
+    .skillsContainer .skillGrid{
+        grid-template-columns: repeat(3, 1fr);
+        gap: 15px;
+    }
+    .skillsContainer .skillGrid .card{
+        padding: 50px;
     }
 }
 
+@media(max-width: 1100px){
+    .skillsContainer .skillGrid{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+    }
+    .skillsContainer .skillGrid .card{
+        padding: 50px;
+    }
+}
